Added Fragments, navigation and some dependencies

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:theme="@style/Theme.Cancerpedia"
         tools:targetApi="31">
         <activity
-            android:name=".StartActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".cancerscreens.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
